# test-release

./: .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Changelog.md  FeatureRequest.md  README.md  index.html  manifest_esp32cam.json  manifest_xiao-esp32s3-sense.json  release-please-config.json  update-webinstaller.yml  version.txt
.github/: changelog-ci-config.yaml  release.yml
code/: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32cam-himem.defaults  sdkconfig.esp32cam-localbuild  sdkconfig.esp32cam-task-analysis.defaults  (+4 more)
code/components/camera_ctrl/: CMakeLists.txt  ClassControlCamera.cpp  ClassControlCamera.h  ov2640_sharpness.cpp  ov2640_sharpness.h  server_camera.cpp  server_camera.h
code/components/mainprocess_ctrl/: CMakeLists.txt  ClassFlow.cpp  ClassFlow.h  ClassFlowAlignment.cpp  ClassFlowAlignment.h  ClassFlowCNNGeneral.cpp  ClassFlowCNNGeneral.h  ClassFlowControl.cpp  ClassFlowControl.h  ClassFlowDefineTypes.h  ClassFlowInfluxDBv1.cpp  ClassFlowInfluxDBv1.h  ClassFlowInfluxDBv2.cpp  ClassFlowInfluxDBv2.h  ClassFlowMQTT.cpp  ClassFlowMQTT.h  ClassFlowPostProcessing.cpp  ClassFlowPostProcessing.h  ClassFlowTakeImage.cpp  ClassFlowTakeImage.h  ClassLogImage.cpp  ClassLogImage.h  MainFlowControl.cpp  MainFlowControl.h
code/test/components/config_handling/: CMakeLists.txt  config_json_default_expected.txt  config_json_high_limit.txt  config_json_high_limit_expected.txt  config_json_low_limit.txt  config_json_low_limit_expected.txt  config_json_special.txt  config_json_special_expected.txt  test_configClass.cpp
(+597 files in other folders)
